--- a/css/global.css
+++ b/css/global.css
@@ -3,12 +3,11 @@ header {
 }
 
 .logo {
-    max-height: 150px;
+    max-height: 80px;
 }
 
-/* Make the footer stick to the bottom */
 html, body {
-    height: 100%;
+    height: 100vh;
     margin: 0;
     display: flex;
     flex-direction: column;
