--- a/css/global.css
+++ b/css/global.css
@@ -2,7 +2,7 @@ header {
     background-color: #fc5f02;
 }
 
-.logo {
+.logo, .logo2 {
     max-height: 80px;
 }
 
@@ -23,4 +23,9 @@ footer {
     text-align: center;
     padding: 1rem 0;
     margin-top: auto;
+}
+
+.product-card:hover {
+    transform: scale(1.1);
+    transition: transform 0.4s ease-in-out;
 }
