--- a/css/global.css
+++ b/css/global.css
@@ -29,3 +29,112 @@ footer {
     transform: scale(1.1);
     transition: transform 0.4s ease-in-out;
 }
+
+.product-card:hover {
+    transform: scale(1.1);
+    transition: transform 0.4s ease-in-out;
+}
+
+.header-right {
+    display: flex;
+    align-items: center;
+}
+.header-right img {
+    margin-left: 20px;
+}
+
+.section-link {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    color: white;
+}
+
+.section-link img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.section-link .label {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px 20px;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.square-image {
+    width: 100%;
+    padding-top: 100%;
+    position: relative;
+}
+
+.square-image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+.section-link {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    color: white;
+}
+
+.section-link img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.section-link .label {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px 20px;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.square-image {
+    width: 100%;
+    padding-top: 100%;
+    position: relative;
+}
+
+.square-image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.catalog-card {
+    max-width: 300px;
+    margin: 0 auto;
+    transition: background-color 0.3s ease;
+}
+
+.catalog-card:hover {
+    background-color: grey;
+    transform: scale(1.1);
+    transition: transform 0.4s ease-in-out;
+}
+
+.product-card:hover {
+    transform: scale(1.1);
+    transition: transform 0.4s ease-in-out;
+}
