--- a/css/global.css
+++ b/css/global.css
@@ -2,8 +2,27 @@ header {
     background-color: #fc5f02;
 }
 
+.back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    z-index: 1000;
+}
+
+.cart-item span {
+    width: 60px;
+    text-align: center;
+    display: inline-block;
+}
+
+
+.sticky-top{
+    z-index: 1000;
+}
+
 .logo, .logo2 {
-    max-height: 80px;
+    max-height: 60px;
 }
 
 html, body {
@@ -33,14 +52,6 @@ footer {
 .product-card:hover {
     transform: scale(1.1);
     transition: transform 0.4s ease-in-out;
-}
-
-.header-right {
-    display: flex;
-    align-items: center;
-}
-.header-right img {
-    margin-left: 20px;
 }
 
 .section-link {
